# tutorial_empty_cpp_cmake

./: .gitignore  CMakeLists.txt  README.md
empty.src/: CMakeLists.txt  empty.cpp
src/executable_empty/: CMakeLists.txt  empty.cpp
src/library_sample/: CMakeLists.txt  sample.cpp  sample.hpp
